#482190: Fix for visibility of active tags field.

--- a/theme/style.css
+++ b/theme/style.css
@@ -694,6 +694,7 @@ form div.buttons {
     color:#999;
     }
 
+input.form-autocomplete,
 input.form-text,
 textarea.form-textarea,
 select.form-select {
